--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+button.btn-blue {
+   background-color: rgb(63, 105, 240);
+}
+
+button.btn-delete {
+  background-color: rgb(251, 7, 7);
+}
+
